Bug 1378079 - Part 3: Complete the steps related to custom elements in "create an element for a token". r=hsivonen,smaug
UltraBlame original commit: 11ef829cb8e6f559957272eb79e8b721e1d4bcc8

--- a/dom/tests/mochitest/webcomponents/test_document_register_parser.html
+++ b/dom/tests/mochitest/webcomponents/test_document_register_parser.html
@@ -103,7 +103,7 @@ false
 ;
 extendedButtonProto
 .
-createdCallback
+connectedCallback
 =
 function
 (
@@ -197,7 +197,7 @@ false
 ;
 divProto
 .
-createdCallback
+connectedCallback
 =
 function
 (
