Bug 1411746 Make tests that wait for controller change also wait for SW activation before claim(). r=tt
UltraBlame original commit: 651339b407c222f1689b7d444e7deeca1229e676

--- a/dom/workers/test/serviceworkers/test_devtools_bypass_serviceworker.html
+++ b/dom/workers/test/serviceworkers/test_devtools_bypass_serviceworker.html
@@ -155,6 +155,20 @@ div
 >
 <
 script
+src
+=
+"
+utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 type
 =
 "
@@ -702,38 +716,6 @@ register
 swURL
 )
 ;
-/
-/
-Wait
-for
-the
-service
-worker
-to
-control
-the
-document
-let
-waitForControlled
-=
-new
-Promise
-(
-resolve
-=
->
-{
-navigator
-.
-serviceWorker
-.
-oncontrollerchange
-=
-resolve
-;
-}
-)
-;
 let
 sw
 =
@@ -751,6 +733,15 @@ registration
 .
 installing
 ;
+await
+waitForState
+(
+sw
+'
+activated
+'
+)
+;
 sw
 .
 postMessage
@@ -762,6 +753,9 @@ claim
 ;
 await
 waitForControlled
+(
+window
+)
 ;
 try
 {
