--- a/dom/workers/test/serviceworkers/test_unresolved_fetch_interception.html
+++ b/dom/workers/test/serviceworkers/test_unresolved_fetch_interception.html
@@ -210,6 +210,20 @@ pre
 >
 <
 script
+src
+=
+"
+utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 class
 =
 "
@@ -367,47 +381,6 @@ idle_extended_timeout
 }
 )
 ;
-/
-/
-The
-SW
-will
-claim
-us
-once
-it
-activates
-;
-this
-is
-async
-start
-listening
-now
-.
-let
-waitForControlled
-=
-new
-Promise
-(
-(
-resolve
-)
-=
->
-{
-navigator
-.
-serviceWorker
-.
-oncontrollerchange
-=
-resolve
-;
-}
-)
-;
 let
 registration
 =
@@ -433,8 +406,41 @@ scope
 }
 )
 ;
+let
+worker
+=
+registration
+.
+installing
+|
+|
+registration
+.
+active
+;
+await
+waitForState
+(
+worker
+'
+activated
+'
+)
+;
+worker
+.
+postMessage
+(
+'
+claim
+'
+)
+;
 await
 waitForControlled
+(
+window
+)
 ;
 ok
 (
