--- a/dom/workers/test/serviceworkers/test_fetch_integrity.html
+++ b/dom/workers/test/serviceworkers/test_fetch_integrity.html
@@ -153,6 +153,20 @@ div
 >
 <
 script
+src
+=
+"
+utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 type
 =
 "
@@ -443,47 +457,6 @@ html
 "
 )
 ;
-/
-/
-The
-SW
-will
-claim
-us
-once
-it
-activates
-;
-this
-is
-async
-start
-listening
-now
-.
-let
-waitForControlled
-=
-new
-Promise
-(
-(
-resolve
-)
-=
->
-{
-navigator
-.
-serviceWorker
-.
-oncontrollerchange
-=
-resolve
-;
-}
-)
-;
 let
 registration
 =
@@ -521,6 +494,15 @@ registration
 .
 active
 ;
+await
+waitForState
+(
+worker
+'
+activated
+'
+)
+;
 worker
 .
 postMessage
@@ -532,6 +514,9 @@ claim
 ;
 await
 waitForControlled
+(
+window
+)
 ;
 info
 (
