Backed out changeset 651339b407c2 (bug 1411746) for failing mochitest dom/workers/test/serviceworkers/test_unresolved_fetch_interception.html on Windows 7 debug without e10s. r=backout
UltraBlame original commit: e863dc231d0095d0cc7bc1ddbf83a51c6958c343

--- a/dom/workers/test/serviceworkers/test_devtools_bypass_serviceworker.html
+++ b/dom/workers/test/serviceworkers/test_devtools_bypass_serviceworker.html
@@ -155,20 +155,6 @@ div
 >
 <
 script
-src
-=
-"
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
-script
 type
 =
 "
@@ -716,6 +702,38 @@ register
 swURL
 )
 ;
+/
+/
+Wait
+for
+the
+service
+worker
+to
+control
+the
+document
+let
+waitForControlled
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+navigator
+.
+serviceWorker
+.
+oncontrollerchange
+=
+resolve
+;
+}
+)
+;
 let
 sw
 =
@@ -733,15 +751,6 @@ registration
 .
 installing
 ;
-await
-waitForState
-(
-sw
-'
-activated
-'
-)
-;
 sw
 .
 postMessage
@@ -753,9 +762,6 @@ claim
 ;
 await
 waitForControlled
-(
-window
-)
 ;
 try
 {
