--- a/dom/workers/test/serviceworkers/test_fetch_integrity.html
+++ b/dom/workers/test/serviceworkers/test_fetch_integrity.html
@@ -153,20 +153,6 @@ div
 >
 <
 script
-src
-=
-"
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
-script
 type
 =
 "
@@ -457,6 +443,47 @@ html
 "
 )
 ;
+/
+/
+The
+SW
+will
+claim
+us
+once
+it
+activates
+;
+this
+is
+async
+start
+listening
+now
+.
+let
+waitForControlled
+=
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+{
+navigator
+.
+serviceWorker
+.
+oncontrollerchange
+=
+resolve
+;
+}
+)
+;
 let
 registration
 =
@@ -494,15 +521,6 @@ registration
 .
 active
 ;
-await
-waitForState
-(
-worker
-'
-activated
-'
-)
-;
 worker
 .
 postMessage
@@ -514,9 +532,6 @@ claim
 ;
 await
 waitForControlled
-(
-window
-)
 ;
 info
 (
