--- a/dom/workers/test/serviceworkers/test_unresolved_fetch_interception.html
+++ b/dom/workers/test/serviceworkers/test_unresolved_fetch_interception.html
@@ -210,20 +210,6 @@ pre
 >
 <
 script
-src
-=
-"
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
-script
 class
 =
 "
@@ -381,6 +367,47 @@ idle_extended_timeout
 }
 )
 ;
+/
+/
+The
+SW
+will
+claim
+us
+once
+it
+activates
+;
+this
+is
+async
+start
+listening
+now
+.
+let
+waitForControlled
+=
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+{
+navigator
+.
+serviceWorker
+.
+oncontrollerchange
+=
+resolve
+;
+}
+)
+;
 let
 registration
 =
@@ -406,41 +433,8 @@ scope
 }
 )
 ;
-let
-worker
-=
-registration
-.
-installing
-|
-|
-registration
-.
-active
-;
-await
-waitForState
-(
-worker
-'
-activated
-'
-)
-;
-worker
-.
-postMessage
-(
-'
-claim
-'
-)
-;
 await
 waitForControlled
-(
-window
-)
 ;
 ok
 (
