Bug 638313 - splitting and making test_docload tests more reliable. r=surkov
MozReview-Commit-ID: 5U8pOsJrfLm

UltraBlame original commit: c641a06bd8a7100aef2b12b2990cd76332870f46

--- a/accessible/tests/mochitest/events/docload/test_docload_embedded.html
+++ b/accessible/tests/mochitest/events/docload/test_docload_embedded.html
@@ -11,7 +11,6 @@ Accessible
 events
 testing
 for
-ARIA
 document
 <
 /
@@ -100,6 +99,9 @@ src
 .
 .
 /
+.
+.
+/
 common
 .
 js
@@ -121,6 +123,9 @@ javascript
 src
 =
 "
+.
+.
+/
 .
 .
 /
@@ -148,27 +153,6 @@ src
 .
 .
 /
-states
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
 .
 .
 /
@@ -271,20 +255,38 @@ javascript
 /
 Invokers
 function
-showARIADialog
+changeIframeSrc
 (
-aID
+aIdentifier
+aURL
 )
 {
 this
 .
-dialogNode
+DOMNode
 =
 getNode
 (
-aID
+aIdentifier
 )
 ;
+function
+getIframeDoc
+(
+)
+{
+return
+getAccessible
+(
+getNode
+(
+aIdentifier
+)
+.
+contentDocument
+)
+;
+}
 this
 .
 eventSeq
@@ -293,10 +295,19 @@ eventSeq
 new
 invokerChecker
 (
-EVENT_DOCUMENT_LOAD_COMPLETE
+EVENT_REORDER
+getAccessible
+(
 this
 .
-dialogNode
+DOMNode
+)
+)
+new
+asyncInvokerChecker
+(
+EVENT_DOCUMENT_LOAD_COMPLETE
+getIframeDoc
 )
 ]
 ;
@@ -304,41 +315,79 @@ this
 .
 invoke
 =
-function
-showARIADialog_invoke
 (
 )
-{
+=
+>
+(
 this
 .
-dialogNode
+DOMNode
 .
-style
+src
+=
+aURL
+)
+;
+this
 .
-display
+finalCheck
+=
+(
+)
+=
+>
+testAccessibleTree
+(
+this
+.
+DOMNode
+{
+role
+:
+ROLE_INTERNAL_FRAME
+children
+:
+[
+{
+role
+:
+ROLE_DOCUMENT
+name
+:
+aURL
+=
 =
 "
-block
+about
+:
 "
-;
+?
+"
+About
+:
+"
+:
+aURL
 }
+]
+}
+)
 ;
 this
 .
 getID
 =
-function
-showARIADialog_getID
 (
 )
+=
+>
+change
+iframe
+src
+on
 {
-return
-"
-show
-ARIA
-dialog
-"
-;
+aURL
 }
 ;
 }
@@ -422,27 +471,12 @@ dialog
 /
 Do
 tests
-var
-gQueue
-=
-null
-;
-/
-/
-Debug
-stuff
-.
-/
-/
-gA11yEventDumpToConsole
-=
-true
-;
 function
 doTests
 (
 )
 {
+const
 gQueue
 =
 new
@@ -455,10 +489,14 @@ gQueue
 push
 (
 new
-showARIADialog
+changeIframeSrc
 (
 "
-dialog
+iframe
+"
+"
+about
+:
 "
 )
 )
@@ -468,10 +506,15 @@ gQueue
 push
 (
 new
-showARIADialog
+changeIframeSrc
 (
 "
-document
+iframe
+"
+"
+about
+:
+buildconfig
 "
 )
 )
@@ -541,23 +584,76 @@ cgi
 ?
 id
 =
-759833
+420845
 "
 title
 =
 "
-ARIA
-documents
-should
-fire
+Fire
+event_reorder
+on
+any
+embedded
+frames
+/
+iframes
+whos
 document
-loading
-events
+has
+just
+loaded
 "
 >
 Mozilla
 Bug
-759833
+420845
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+754165
+"
+title
+=
+"
+Fire
+document
+load
+events
+on
+iframes
+too
+"
+>
+Mozilla
+Bug
+754165
 <
 /
 a
@@ -607,60 +703,24 @@ pre
 >
 <
 div
-role
-=
-"
-dialog
-"
 id
 =
 "
-dialog
-"
-style
-=
-"
-display
-:
-none
-;
+testContainer
 "
 >
-It
-'
-s
-a
-dialog
+<
+iframe
+id
+=
+"
+iframe
+"
+>
 <
 /
-div
+iframe
 >
-<
-div
-role
-=
-"
-document
-"
-id
-=
-"
-document
-"
-style
-=
-"
-display
-:
-none
-;
-"
->
-It
-'
-s
-a
-document
 <
 /
 div
