Bug 1411806 - Update test descriptions for document timeline tests; r=hiro
Now that some of these tests have been moved to the timing-model directory, it
makes less sense to refer to the actual API being tested. Intead they should
refer to the concept in the model being tested.

MozReview-Commit-ID: 7Y65o0IilSq

UltraBlame original commit: 7feda3cfcbf4c9a12104b8f7531045dcb33d6105

--- a/testing/web-platform/tests/web-animations/interfaces/Document/timeline.html
+++ b/testing/web-platform/tests/web-animations/interfaces/Document/timeline.html
@@ -164,7 +164,7 @@ document
 .
 timeline
 '
-document
+Document
 .
 timeline
 returns
@@ -199,7 +199,7 @@ contentDocument
 .
 timeline
 '
-document
+Document
 .
 timeline
 returns
@@ -221,7 +221,7 @@ contentDocument
 timeline
 null
 '
-document
+Document
 .
 timeline
 on
@@ -235,11 +235,14 @@ null
 ;
 }
 '
-document
+Document
 .
 timeline
-identity
-tests
+returns
+the
+default
+document
+timeline
 '
 )
 ;
