--- a/testing/web-platform/tests/web-animations/timing-model/timelines/document-timelines.html
+++ b/testing/web-platform/tests/web-animations/timing-model/timelines/document-timelines.html
@@ -141,11 +141,11 @@ currentTime
 >
 0
 '
-document
-.
-timeline
-.
-currentTime
+The
+current
+time
+is
+initially
 is
 positive
 '
@@ -310,15 +310,10 @@ timeline
 currentTime
 rafTime
 '
-document
-.
-timeline
-.
-currentTime
+The
+current
+time
 matches
-'
-+
-'
 requestAnimationFrame
 time
 '
@@ -338,13 +333,14 @@ done
 ;
 }
 '
-document
-.
-timeline
-.
-currentTime
-value
-tests
+Document
+timelines
+report
+current
+time
+relative
+to
+navigationStart
 '
 )
 ;
