--- a/testing/web-platform/tests/web-animations/timing-model/timelines/timelines.html
+++ b/testing/web-platform/tests/web-animations/timing-model/timelines/timelines.html
@@ -177,18 +177,15 @@ timeline
 currentTime
 valueAtStart
 '
-document
-.
-timeline
-.
-currentTime
+Timeline
+time
 does
 not
 change
 within
-a
-script
-block
+an
+animation
+frame
 '
 )
 ;
@@ -213,15 +210,12 @@ timeline
 currentTime
 valueAtStart
 '
-document
-.
-timeline
-.
-currentTime
+Timeline
+time
 increases
 between
-script
-blocks
+animation
+frames
 '
 )
 ;
@@ -230,13 +224,13 @@ blocks
 ;
 }
 '
-document
-.
-timeline
-.
-currentTime
-liveness
-tests
+Timeline
+time
+increases
+once
+per
+animation
+frame
 '
 )
 ;
@@ -343,22 +337,21 @@ iframeTimeline
 currentTime
 valueAtStart
 '
+Timeline
+time
+within
+an
 iframe
-document
-.
-timeline
-.
-currentTime
 does
 not
 change
 within
-a
+an
 '
 +
 '
-script
-block
+animation
+frame
 '
 )
 ;
@@ -384,16 +377,15 @@ iframeTimeline
 currentTime
 valueAtStart
 '
+Timeline
+time
+within
+an
 iframe
-document
-.
-timeline
-.
-currentTime
 increases
 between
-script
-blocks
+animation
+frames
 '
 )
 ;
@@ -422,14 +414,16 @@ iframe
 ;
 }
 '
+Timeline
+time
+increases
+once
+per
+animation
+frame
+in
+an
 iframe
-document
-.
-timeline
-.
-currentTime
-liveness
-tests
 '
 )
 ;
@@ -475,7 +469,8 @@ timeline
 currentTime
 startTime
 '
-currentTime
+Timeline
+time
 should
 have
 progressed
@@ -519,7 +514,8 @@ timeline
 currentTime
 firstRafTime
 '
-currentTime
+Timeline
+time
 should
 be
 the
@@ -541,11 +537,7 @@ done
 ;
 }
 '
-document
-.
-timeline
-.
-currentTime
+Timeline
 time
 should
 be
@@ -554,12 +546,13 @@ same
 for
 all
 RAF
+callbacks
+in
+an
+animation
 '
 +
 '
-callbacks
-in
-a
 frame
 '
 )
