Bug 1411806 - Tidy up DocumentTimeline/idlharness.html test; r=hiro
There doesn't seem to be any need for the test() wrapper here (I've yet to find
any other tests in web-platform-tests using it).

MozReview-Commit-ID: y3FrMvK14j

UltraBlame original commit: 1abb342de639e91e2b4fb2df3052ce2211ed5476

--- a/testing/web-platform/tests/web-animations/interfaces/DocumentTimeline/idlharness.html
+++ b/testing/web-platform/tests/web-animations/interfaces/DocumentTimeline/idlharness.html
@@ -14,15 +14,39 @@ utf
 <
 title
 >
-Web
-Animations
-API
-:
 DocumentTimeline
-tests
+IDL
 <
 /
 title
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+w3c
+.
+github
+.
+io
+/
+web
+-
+animations
+/
+#
+documenttimeline
+"
 >
 <
 script
@@ -190,15 +214,7 @@ use
 strict
 '
 ;
-var
-idlArray
-;
-test
-(
-function
-(
-)
-{
+const
 idlArray
 =
 new
@@ -256,9 +272,6 @@ document
 timeline
 '
 ]
-}
-)
-;
 }
 )
 ;
