Bug 1411806 - Tidy up Animation/idlharness.html test; r=hiro
MozReview-Commit-ID: 61tUueSIyfM

UltraBlame original commit: 19617296fc5b7b7b3987cb48af669d154e09dc8d

--- a/testing/web-platform/tests/web-animations/interfaces/Animation/idlharness.html
+++ b/testing/web-platform/tests/web-animations/interfaces/Animation/idlharness.html
@@ -15,13 +15,38 @@ utf
 title
 >
 Animation
-interface
-automated
 IDL
-tests
 <
 /
 title
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+w3c
+.
+github
+.
+io
+/
+web
+-
+animations
+/
+#
+animation
+"
 >
 <
 script
@@ -83,26 +108,6 @@ src
 resources
 /
 idlharness
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-.
-.
-/
-.
-.
-/
-testcommon
 .
 js
 "
@@ -276,13 +281,6 @@ use
 strict
 '
 ;
-test
-(
-function
-(
-t
-)
-{
 const
 idlArray
 =
@@ -348,21 +346,6 @@ IDL
 textContent
 )
 ;
-/
-/
-const
-animation
-=
-createDiv
-(
-t
-)
-.
-animate
-(
-null
-)
-;
 idlArray
 .
 add_objects
@@ -385,9 +368,6 @@ idlArray
 .
 test
 (
-)
-;
-}
 )
 ;
 <
