Bug 1411806 - Tidy up KeyframeEffect(ReadOnly) constructor tests; r=hiro
These are non-functional changes to:

* Use ES6 const/let
* Use ES6 template strings in various places
* Capitalize/fix test descriptions

MozReview-Commit-ID: CcEl42yVIQx

UltraBlame original commit: 12848ee901bfb53e15285c3e487ce27a0bcd2c25

--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
@@ -14,9 +14,10 @@ utf
 <
 title
 >
+KeyframeEffect
+and
 KeyframeEffectReadOnly
 constructor
-tests
 <
 /
 title
@@ -46,11 +47,43 @@ web
 animations
 /
 #
-the
+dom
 -
 keyframeeffect
 -
-interfaces
+keyframeeffect
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+w3c
+.
+github
+.
+io
+/
+web
+-
+animations
+/
+#
+dom
+-
+keyframeeffectreadonly
+-
+keyframeeffectreadonly
 "
 >
 <
@@ -207,57 +240,23 @@ target
 div
 >
 <
-style
->
-#
-target
-{
-border
--
-style
-:
-solid
-;
-/
-*
-so
-border
--
-*
--
-width
-values
-don
-'
-t
-compute
-to
-0
-*
-/
-}
-<
-/
-style
->
-<
 script
 >
-"
+'
 use
 strict
-"
+'
 ;
-var
+const
 target
 =
 document
 .
 getElementById
 (
-"
+'
 target
-"
+'
 )
 ;
 test
@@ -291,12 +290,12 @@ getKeyframes
 .
 length
 0
-"
+'
 number
 of
 frames
 for
-"
+'
 +
 JSON
 .
@@ -310,8 +309,8 @@ frames
 )
 ;
 }
-"
-a
+'
+A
 KeyframeEffectReadOnly
 can
 be
@@ -319,7 +318,7 @@ constructed
 with
 no
 frames
-"
+'
 )
 ;
 test
@@ -338,7 +337,7 @@ function
 subtest
 )
 {
-var
+const
 easing
 =
 subtest
@@ -346,7 +345,7 @@ subtest
 0
 ]
 ;
-var
+const
 expected
 =
 subtest
@@ -354,7 +353,7 @@ subtest
 1
 ]
 ;
-var
+const
 effect
 =
 new
@@ -365,12 +364,12 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
 {
@@ -388,25 +387,21 @@ timing
 .
 easing
 expected
-"
 resulting
 easing
 for
 '
-"
-+
+{
 easing
-+
-"
+}
 '
-"
 )
 ;
 }
 )
 ;
 }
-"
+'
 easing
 values
 are
@@ -416,14 +411,14 @@ when
 passed
 to
 the
-"
+'
 +
-"
+'
 KeyframeEffectReadOnly
 constructor
 in
 KeyframeEffectOptions
-"
+'
 )
 ;
 test
@@ -480,7 +475,7 @@ invalidEasing
 ;
 }
 '
-invalid
+Invalid
 easing
 values
 are
@@ -507,7 +502,7 @@ function
 t
 )
 {
-var
+const
 getKeyframe
 =
 function
@@ -520,12 +515,12 @@ return
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 composite
 :
@@ -543,7 +538,7 @@ function
 composite
 )
 {
-var
+const
 effect
 =
 new
@@ -569,18 +564,14 @@ getKeyframes
 .
 composite
 composite
-"
 resulting
 composite
 for
 '
-"
-+
+{
 composite
-+
-"
+}
 '
-"
 )
 ;
 }
@@ -620,7 +611,7 @@ composite
 )
 ;
 }
-"
+'
 composite
 values
 are
@@ -630,9 +621,9 @@ when
 passed
 to
 the
-"
+'
 +
-"
+'
 KeyframeEffectReadOnly
 constructor
 in
@@ -640,7 +631,7 @@ property
 -
 indexed
 keyframes
-"
+'
 )
 ;
 test
@@ -650,7 +641,7 @@ function
 t
 )
 {
-var
+const
 getKeyframes
 =
 function
@@ -666,9 +657,9 @@ offset
 0
 left
 :
-"
+'
 10px
-"
+'
 composite
 :
 composite
@@ -679,9 +670,9 @@ offset
 1
 left
 :
-"
+'
 20px
-"
+'
 }
 ]
 ;
@@ -696,7 +687,7 @@ function
 composite
 )
 {
-var
+const
 effect
 =
 new
@@ -722,18 +713,14 @@ getKeyframes
 .
 composite
 composite
-"
 resulting
 composite
 for
 '
-"
-+
+{
 composite
-+
-"
+}
 '
-"
 )
 ;
 }
@@ -773,7 +760,7 @@ composite
 )
 ;
 }
-"
+'
 composite
 values
 are
@@ -783,15 +770,15 @@ when
 passed
 to
 the
-"
+'
 +
-"
+'
 KeyframeEffectReadOnly
 constructor
 in
 regular
 keyframes
-"
+'
 )
 ;
 test
@@ -810,7 +797,7 @@ function
 composite
 )
 {
-var
+const
 effect
 =
 new
@@ -821,12 +808,12 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
 {
@@ -849,18 +836,14 @@ getKeyframes
 .
 composite
 undefined
-"
 resulting
 composite
 for
 '
-"
-+
+{
 composite
-+
-"
+}
 '
-"
 )
 ;
 }
@@ -891,12 +874,12 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
 {
@@ -913,7 +896,7 @@ composite
 )
 ;
 }
-"
+'
 composite
 value
 is
@@ -925,15 +908,15 @@ operation
 specified
 on
 the
-"
+'
 +
-"
+'
 keyframe
 effect
 is
 being
 used
-"
+'
 )
 ;
 gKeyframesTests
@@ -952,7 +935,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -977,18 +960,17 @@ output
 )
 ;
 }
-"
-a
+A
 KeyframeEffectReadOnly
 can
 be
 constructed
 with
-"
-+
+{
 subtest
 .
 desc
+}
 )
 ;
 test
@@ -998,7 +980,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -1010,7 +992,7 @@ subtest
 input
 )
 ;
-var
+const
 secondEffect
 =
 new
@@ -1039,20 +1021,16 @@ getKeyframes
 )
 ;
 }
-"
-a
+A
 KeyframeEffectReadOnly
 constructed
 with
-"
-+
+{
 subtest
 .
 desc
-+
-"
+}
 roundtrips
-"
 )
 ;
 }
@@ -1095,16 +1073,15 @@ input
 )
 ;
 }
-"
 KeyframeEffectReadOnly
 constructor
 throws
 with
-"
-+
+{
 subtest
 .
 desc
+}
 )
 ;
 }
@@ -1117,7 +1094,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -1128,17 +1105,17 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
 )
 ;
-var
+const
 timing
 =
 effect
@@ -1151,10 +1128,10 @@ timing
 .
 delay
 0
-"
+'
 default
 delay
-"
+'
 )
 ;
 assert_equals
@@ -1163,10 +1140,10 @@ timing
 .
 endDelay
 0
-"
+'
 default
 endDelay
-"
+'
 )
 ;
 assert_equals
@@ -1174,13 +1151,13 @@ assert_equals
 timing
 .
 fill
-"
+'
 auto
-"
-"
+'
+'
 default
 fill
-"
+'
 )
 ;
 assert_equals
@@ -1191,10 +1168,10 @@ iterations
 1
 .
 0
-"
+'
 default
 iterations
-"
+'
 )
 ;
 assert_equals
@@ -1205,10 +1182,10 @@ iterationStart
 0
 .
 0
-"
+'
 default
 iterationStart
-"
+'
 )
 ;
 assert_equals
@@ -1216,13 +1193,13 @@ assert_equals
 timing
 .
 duration
-"
+'
 auto
-"
-"
+'
+'
 default
 duration
-"
+'
 )
 ;
 assert_equals
@@ -1230,13 +1207,13 @@ assert_equals
 timing
 .
 direction
-"
+'
 normal
-"
-"
+'
+'
 default
 direction
-"
+'
 )
 ;
 assert_equals
@@ -1244,13 +1221,13 @@ assert_equals
 timing
 .
 easing
-"
+'
 linear
-"
-"
+'
+'
 default
 easing
-"
+'
 )
 ;
 assert_equals
@@ -1258,13 +1235,13 @@ assert_equals
 effect
 .
 composite
-"
+'
 replace
-"
-"
+'
+'
 default
 composite
-"
+'
 )
 ;
 assert_equals
@@ -1272,28 +1249,28 @@ assert_equals
 effect
 .
 iterationComposite
-"
+'
 replace
-"
-"
+'
+'
 default
 iterationComposite
-"
+'
 )
 ;
 }
-"
-a
+'
+A
 KeyframeEffectReadOnly
 constructed
 without
 any
-"
+'
 +
-"
+'
 KeyframeEffectOptions
 object
-"
+'
 )
 ;
 gKeyframeEffectOptionTests
@@ -1302,7 +1279,7 @@ forEach
 (
 function
 (
-stest
+subtest
 )
 {
 test
@@ -1312,7 +1289,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -1323,15 +1300,15 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
-stest
+subtest
 .
 input
 )
@@ -1355,23 +1332,24 @@ not
 supply
 them
 .
-var
+const
 expected
 =
-function
 (
 field
 defaultValue
 )
+=
+>
 {
 return
 field
 in
-stest
+subtest
 .
 expected
 ?
-stest
+subtest
 .
 expected
 [
@@ -1382,7 +1360,7 @@ defaultValue
 ;
 }
 ;
-var
+const
 timing
 =
 effect
@@ -1396,15 +1374,15 @@ timing
 delay
 expected
 (
-"
+'
 delay
-"
+'
 0
 )
-"
+'
 timing
 delay
-"
+'
 )
 ;
 assert_equals
@@ -1414,17 +1392,17 @@ timing
 fill
 expected
 (
-"
+'
 fill
-"
-"
+'
+'
 auto
-"
+'
 )
-"
+'
 timing
 fill
-"
+'
 )
 ;
 assert_equals
@@ -1434,15 +1412,15 @@ timing
 iterations
 expected
 (
-"
+'
 iterations
-"
+'
 1
 )
-"
+'
 timing
 iterations
-"
+'
 )
 ;
 assert_equals
@@ -1452,17 +1430,17 @@ timing
 duration
 expected
 (
-"
+'
 duration
-"
-"
+'
+'
 auto
-"
+'
 )
-"
+'
 timing
 duration
-"
+'
 )
 ;
 assert_equals
@@ -1472,30 +1450,29 @@ timing
 direction
 expected
 (
-"
+'
 direction
-"
-"
+'
+'
 normal
-"
+'
 )
-"
+'
 timing
 direction
-"
+'
 )
 ;
 }
-"
-a
+A
 KeyframeEffectReadOnly
 constructed
 by
-"
-+
-stest
+{
+subtest
 .
 desc
+}
 )
 ;
 }
@@ -1507,7 +1484,7 @@ forEach
 (
 function
 (
-stest
+subtest
 )
 {
 test
@@ -1533,15 +1510,15 @@ target
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
-stest
+subtest
 .
 input
 )
@@ -1550,16 +1527,15 @@ input
 )
 ;
 }
-"
 Invalid
 KeyframeEffectReadOnly
 option
 by
-"
-+
-stest
+{
+subtest
 .
 desc
+}
 )
 ;
 }
@@ -1572,7 +1548,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -1583,12 +1559,12 @@ null
 left
 :
 [
-"
+'
 10px
-"
-"
+'
+'
 20px
-"
+'
 ]
 }
 {
@@ -1599,9 +1575,9 @@ duration
 MS_PER_SEC
 fill
 :
-"
+'
 forwards
-"
+'
 }
 )
 ;
@@ -1611,7 +1587,7 @@ effect
 .
 target
 null
-"
+'
 Effect
 created
 with
@@ -1620,18 +1596,18 @@ target
 has
 correct
 target
-"
+'
 )
 ;
 }
-"
-a
+'
+A
 KeyframeEffectReadOnly
 constructed
 with
 null
 target
-"
+'
 )
 ;
 test
@@ -1641,15 +1617,15 @@ function
 t
 )
 {
-var
+const
 test_error
 =
 {
 name
 :
-"
+'
 test
-"
+'
 }
 ;
 assert_throws
@@ -1678,7 +1654,7 @@ test_error
 )
 ;
 }
-"
+'
 KeyframeEffect
 constructor
 propagates
@@ -1686,13 +1662,13 @@ exceptions
 generated
 by
 accessing
-"
+'
 +
-"
+'
 the
 options
 object
-"
+'
 )
 ;
 <
