--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/copy-constructor.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/copy-constructor.html
@@ -175,7 +175,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -188,7 +188,7 @@ t
 null
 )
 ;
-var
+const
 copiedEffect
 =
 new
@@ -213,9 +213,8 @@ target
 ;
 }
 '
-Test
-copied
-keyframeEffectReadOnly
+Copied
+KeyframeEffectReadOnly
 has
 the
 same
@@ -230,7 +229,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -301,7 +300,7 @@ left
 }
 )
 ;
-var
+const
 copiedEffect
 =
 new
@@ -310,8 +309,8 @@ KeyframeEffectReadOnly
 effect
 )
 ;
-var
-KeyframesA
+const
+keyframesA
 =
 effect
 .
@@ -319,8 +318,8 @@ getKeyframes
 (
 )
 ;
-var
-KeyframesB
+const
+keyframesB
 =
 copiedEffect
 .
@@ -330,10 +329,10 @@ getKeyframes
 ;
 assert_equals
 (
-KeyframesA
+keyframesA
 .
 length
-KeyframesB
+keyframesB
 .
 length
 '
@@ -345,14 +344,14 @@ length
 ;
 for
 (
-var
+let
 i
 =
 0
 ;
 i
 <
-KeyframesA
+keyframesA
 .
 length
 ;
@@ -363,204 +362,175 @@ i
 {
 assert_equals
 (
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 offset
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 offset
-'
 Keyframe
-'
-+
+{
 i
-+
-'
+}
 has
 the
 same
 offset
-'
 )
 ;
 assert_equals
 (
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 computedOffset
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 computedOffset
-'
-keyframe
-'
-+
+Keyframe
+{
 i
-+
-'
+}
 has
 the
 same
 computedOffset
-'
 )
 ;
 assert_equals
 (
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 easing
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 easing
-'
-keyframe
-'
-+
+Keyframe
+{
 i
-+
-'
+}
 has
 the
 same
 easing
-'
 )
 ;
 assert_equals
 (
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 composite
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 composite
-'
-keyframe
-'
-+
+Keyframe
+{
 i
-+
-'
+}
 has
 the
 same
 composite
-'
 )
 ;
 assert_true
 (
 !
 !
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 marginLeft
-'
-original
+Original
 keyframe
-'
-+
+{
 i
-+
-'
+}
 has
-the
+a
 valid
 property
 value
-'
 )
 ;
 assert_true
 (
 !
 !
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 marginLeft
-'
-new
+New
 keyframe
-'
-+
+{
 i
-+
-'
+}
 has
-the
+a
 valid
 property
 value
-'
 )
 ;
 assert_equals
 (
-KeyframesA
+keyframesA
 [
 i
 ]
 .
 marginLeft
-KeyframesB
+keyframesB
 [
 i
 ]
 .
 marginLeft
-'
-keyframe
-'
-+
+Keyframe
+{
 i
-+
-'
+}
 has
 the
 same
 property
 value
 pair
-'
 )
 ;
 }
 }
 '
-Test
-copied
-keyframeEffectReadOnly
+Copied
+KeyframeEffectReadOnly
 has
 the
 same
@@ -575,7 +545,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -602,7 +572,7 @@ accumulate
 }
 )
 ;
-var
+const
 copiedEffect
 =
 new
@@ -655,13 +625,12 @@ compositeOperation
 ;
 }
 '
-Test
-copied
-keyframeEffectReadOnly
+Copied
+KeyframeEffectReadOnly
 has
 the
 same
-keyframeEffectOptions
+KeyframeEffectOptions
 '
 )
 ;
@@ -672,7 +641,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -723,7 +692,7 @@ alternate
 }
 )
 ;
-var
+const
 copiedEffect
 =
 new
@@ -732,14 +701,14 @@ KeyframeEffectReadOnly
 effect
 )
 ;
-var
+const
 timingA
 =
 effect
 .
 timing
 ;
-var
+const
 timingB
 =
 copiedEffect
@@ -871,9 +840,8 @@ easing
 ;
 }
 '
-Test
-copied
-keyframeEffectReadOnly
+Copied
+KeyframeEffectReadOnly
 has
 the
 same
@@ -889,7 +857,7 @@ function
 t
 )
 {
-var
+const
 effect
 =
 new
@@ -934,7 +902,7 @@ Make
 a
 mutable
 copy
-var
+const
 copiedEffect
 =
 new
@@ -971,13 +939,13 @@ AnimationEffectTiming
 ;
 }
 '
-Test
-mutable
-copy
+KeyframeEffect
+constructed
 from
 a
 KeyframeEffectReadOnly
-source
+is
+mutable
 '
 )
 ;
