--- a/dom/payments/test/test_payment-request-in-iframe.html
+++ b/dom/payments/test/test_payment-request-in-iframe.html
@@ -405,13 +405,9 @@ iframe
 '
 )
 ;
-window
-.
-addEventListener
-(
-"
-message
-"
+let
+listener
+=
 function
 (
 event
@@ -449,6 +445,15 @@ resolve
 )
 ;
 }
+;
+window
+.
+addEventListener
+(
+"
+message
+"
+listener
 )
 ;
 ifrr
@@ -459,6 +464,7 @@ setAttribute
 allowpaymentrequest
 '
 '
+true
 '
 )
 ;
@@ -501,6 +507,486 @@ appendChild
 ifrr
 )
 ;
+ifrr
+.
+addEventListener
+(
+'
+load
+'
+function
+(
+)
+{
+window
+.
+removeEventListener
+(
+"
+message
+"
+listener
+)
+;
+}
+)
+;
+}
+)
+;
+}
+function
+testRequestWithAttributeChanged
+(
+)
+{
+return
+new
+Promise
+(
+(
+resolve
+reject
+)
+=
+>
+{
+var
+ifrr
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+let
+i
+=
+0
+;
+ifrr
+.
+addEventListener
+(
+'
+load
+'
+function
+(
+)
+{
+if
+(
+i
+=
+=
+=
+0
+)
+{
+ifrr
+.
+removeAttribute
+(
+"
+allowpaymentrequest
+"
+)
+;
+}
+ifrr
+.
+contentWindow
+.
+postMessage
+(
+'
+new
+PaymentRequest
+'
+'
+*
+'
+)
+;
+}
+)
+;
+let
+listener
+=
+function
+(
+event
+)
+{
+i
++
++
+;
+if
+(
+i
+=
+=
+=
+1
+)
+{
+is
+(
+event
+.
+data
+"
+successful
+"
+"
+Expected
+successful
+when
+running
+with
+allowpayment
+attribute
+.
+"
+)
+;
+ifrr
+.
+contentWindow
+.
+location
+.
+href
+=
+ifrr
+.
+src
+;
+}
+else
+{
+is
+(
+event
+.
+data
+"
+SecurityError
+"
+"
+Expected
+SecurityError
+when
+running
+without
+allowpayment
+attribute
+.
+"
+)
+;
+window
+.
+removeEventListener
+(
+"
+message
+"
+listener
+)
+;
+resolve
+(
+)
+;
+}
+}
+window
+.
+addEventListener
+(
+"
+message
+"
+listener
+)
+;
+ifrr
+.
+setAttribute
+(
+'
+allowpaymentrequest
+'
+"
+true
+"
+)
+;
+ifrr
+.
+src
+=
+"
+https
+:
+/
+/
+test1
+.
+example
+.
+com
+:
+443
+/
+tests
+/
+dom
+/
+payments
+/
+test
+/
+echo_payment_request
+.
+html
+"
+;
+document
+.
+body
+.
+appendChild
+(
+ifrr
+)
+;
+}
+)
+;
+}
+function
+testRequestInCrossOriginNestedIFrame
+(
+)
+{
+return
+new
+Promise
+(
+(
+resolve
+reject
+)
+=
+>
+{
+var
+ifrr
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+let
+listener
+=
+function
+(
+event
+)
+{
+if
+(
+!
+ifrr
+.
+hasAttribute
+(
+'
+allowpaymentrequest
+'
+)
+)
+{
+is
+(
+event
+.
+data
+"
+SecurityError
+"
+"
+Expected
+'
+SecurityError
+'
+without
+allowpaymentrequest
+in
+nested
+iframe
+"
+)
+;
+ifrr
+.
+setAttribute
+(
+'
+allowpaymentrequest
+'
+true
+)
+;
+ifrr
+.
+contentWindow
+.
+location
+.
+href
+=
+ifrr
+.
+src
+;
+}
+else
+{
+is
+(
+event
+.
+data
+"
+successful
+"
+"
+Expected
+'
+successful
+'
+with
+allowpaymentrequest
+in
+nested
+iframe
+"
+)
+;
+window
+.
+removeEventListener
+(
+"
+message
+"
+listener
+)
+;
+resolve
+(
+)
+;
+}
+}
+;
+window
+.
+addEventListener
+(
+"
+message
+"
+listener
+)
+;
+ifrr
+.
+addEventListener
+(
+"
+load
+"
+function
+(
+)
+{
+ifrr
+.
+contentWindow
+.
+postMessage
+(
+'
+new
+PaymentRequest
+in
+a
+new
+iframe
+'
+'
+*
+'
+)
+;
+}
+)
+ifrr
+.
+src
+=
+"
+https
+:
+/
+/
+test1
+.
+example
+.
+com
+:
+443
+/
+tests
+/
+dom
+/
+payments
+/
+test
+/
+echo_payment_request
+.
+html
+"
+;
+document
+.
+body
+.
+appendChild
+(
+ifrr
+)
+;
 }
 )
 ;
@@ -522,6 +1008,16 @@ testRequestInIFrame
 then
 (
 testRequestInIFrameWithAttribute
+)
+.
+then
+(
+testRequestWithAttributeChanged
+)
+.
+then
+(
+testRequestInCrossOriginNestedIFrame
 )
 .
 then
