Bug 1404801 - Part 4: Apply styles for animation list. r=gl
MozReview-Commit-ID: Drys4ZKrNW

UltraBlame original commit: 8fc606ab71ed553099c710e627bcf07c987dc452

--- a/devtools/client/inspector/inspector.xhtml
+++ b/devtools/client/inspector/inspector.xhtml
@@ -314,6 +314,30 @@ stylesheet
 href
 =
 "
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+animation
+.
+css
+"
+/
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
 resource
 :
 /
