Bug 1367955 - Remove onended handler during ended handling to avoid video.ended race issues. r=pehrsons
Bug 1386489 means that ended is not reliably set in relation to the test
seeking machinery. This results in the following behaviour being possible:
- seekToNextFrame seeks to last frame
- the seek promise resolves and invokes check to see if video has ended
- ended is not yet set (race), so another seekToNextFrame is setup
- onended handler is invoked at some point (1st time)
- seekToNextFrame seeks again, remains at last frame
- oneended handler is invoked again due to the seek (2nd time)
- finish() has been called twice

This changeset should bandaid the above being possible.

MozReview-Commit-ID: BkskWUnaJQ9

UltraBlame original commit: a30a745cfbcf4a66675ba6f67f0bafd758c5067e

--- a/dom/media/test/test_mediarecorder_record_changing_video_resolution.html
+++ b/dom/media/test/test_mediarecorder_record_changing_video_resolution.html
@@ -753,6 +753,85 @@ finish
 (
 )
 ;
+/
+/
+This
+shouldn
+'
+t
+be
+needed
+however
+video
+.
+ended
+may
+not
+be
+set
+after
+/
+/
+seeking
+to
+the
+final
+frame
+.
+This
+can
+result
+in
+seekToNextFrame
+being
+/
+/
+called
+again
+by
+seekThroughFrames
+and
+onended
+being
+invoked
+again
+/
+/
+resulting
+in
+multiple
+finish
+(
+)
+calls
+.
+/
+/
+FIXME
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1386489
+video
+.
+onended
+=
+null
+;
 }
 ;
 document
