Bug 1379515 - Make test cases that use synthesizeWheelAtPoint proper. r=birtles
We shouldn't call synthesizeWheelAtPoint() in an rAF callback and observe
animation restyle makers there since we might end up observing an animation
restyle maker which is brought by flushing throttled animation styles for
hit-testing caused by the wheel event.  Now we have sendWheelAndPaintNoFlush
which does not flush any styles before sending the wheel event, we use it.

MozReview-Commit-ID: 6WP2ExA7fAv

UltraBlame original commit: dbf516eb07c54f93517c6a568e0d60e0b3e69586

--- a/dom/animation/test/chrome/test_restyles.html
+++ b/dom/animation/test/chrome/test_restyles.html
@@ -459,6 +459,105 @@ resolve
 )
 ;
 }
+function
+waitForWheelEvent
+(
+aTarget
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+/
+/
+Get
+the
+scrollable
+target
+element
+position
+in
+this
+window
+coordinate
+/
+/
+system
+to
+send
+a
+wheel
+event
+to
+the
+element
+.
+var
+targetRect
+=
+aTarget
+.
+getBoundingClientRect
+(
+)
+;
+var
+centerX
+=
+targetRect
+.
+left
++
+targetRect
+.
+width
+/
+2
+;
+var
+centerY
+=
+targetRect
+.
+top
++
+targetRect
+.
+height
+/
+2
+;
+sendWheelAndPaintNoFlush
+(
+aTarget
+centerX
+centerY
+{
+deltaMode
+:
+WheelEvent
+.
+DOM_DELTA_PIXEL
+deltaY
+:
+targetRect
+.
+height
+}
+resolve
+)
+;
+}
+)
+;
+}
 SimpleTest
 .
 expectAssertions
@@ -2027,112 +2126,18 @@ restyles
 '
 )
 ;
-/
-/
-Get
-the
-scrollable
-parent
-element
-position
-in
-this
-window
-coordinate
-/
-/
-system
-to
-send
-a
-wheel
-event
-to
-the
-element
-.
-var
-parentRect
-=
-parentElement
-.
-getBoundingClientRect
+await
+waitForWheelEvent
 (
+parentElement
 )
 ;
-var
-centerX
-=
-parentRect
-.
-left
-+
-parentRect
-.
-width
-/
-2
-;
-var
-centerY
-=
-parentRect
-.
-top
-+
-parentRect
-.
-height
-/
-2
-;
-var
 markers
 =
 await
 observeStyling
 (
-1
-function
-(
-)
-{
-/
-/
-We
-can
-'
-t
-use
-synthesizeWheel
-here
-since
-synthesizeWheel
-causes
-/
-/
-layout
-flush
-.
-synthesizeWheelAtPoint
-(
-centerX
-centerY
-{
-deltaMode
-:
-WheelEvent
-.
-DOM_DELTA_PIXEL
-deltaY
-:
-parentRect
-.
-height
-}
-)
-;
-}
+5
 )
 ;
 is
@@ -2140,7 +2145,7 @@ is
 markers
 .
 length
-1
+5
 '
 Animations
 running
@@ -2413,134 +2418,26 @@ restyles
 '
 )
 ;
-/
-/
-Get
-the
-scrollable
-parent
-element
-position
-in
-this
-window
-coordinate
-/
-/
-system
-to
-send
-a
-wheel
-event
-to
-the
-element
-.
-var
-parentRect
-=
-grandParent
-.
-getBoundingClientRect
+await
+waitForWheelEvent
 (
+grandParent
 )
 ;
-var
-centerX
-=
-parentRect
-.
-left
-+
-parentRect
-.
-width
-/
-2
-;
-var
-centerY
-=
-parentRect
-.
-top
-+
-parentRect
-.
-height
-/
-2
-;
-var
 markers
 =
 await
 observeStyling
 (
-1
-function
-(
-)
-{
-/
-/
-We
-can
-'
-t
-use
-synthesizeWheel
-here
-since
-synthesizeWheel
-causes
-/
-/
-layout
-flush
-.
-synthesizeWheelAtPoint
-(
-centerX
-centerY
-{
-deltaMode
-:
-WheelEvent
-.
-DOM_DELTA_PIXEL
-deltaY
-:
-parentRect
-.
-height
-}
+5
 )
 ;
-}
-)
-;
-/
-/
-FIXME
-:
-We
-should
-reduce
-a
-redundant
-restyle
-here
-.
-ok
+is
 (
 markers
 .
 length
->
-=
-1
+5
 '
 Animations
 running
@@ -2828,77 +2725,15 @@ getAnimations
 0
 ]
 ;
-var
-parentRect
-=
-parentElement
-.
-getBoundingClientRect
-(
-)
-;
-var
-centerX
-=
-parentRect
-.
-left
-+
-parentRect
-.
-width
-/
-2
-;
-var
-centerY
-=
-parentRect
-.
-top
-+
-parentRect
-.
-height
-/
-2
-;
 await
 animation
 .
 ready
 ;
-/
-/
-We
-can
-'
-t
-use
-synthesizeWheel
-here
-since
-synthesizeWheel
-causes
-/
-/
-layout
-flush
-.
-synthesizeWheelAtPoint
+await
+waitForWheelEvent
 (
-centerX
-centerY
-{
-deltaMode
-:
-WheelEvent
-.
-DOM_DELTA_PIXEL
-deltaY
-:
-200
-}
+parentElement
 )
 ;
 var
