--- a/dom/animation/test/mozilla/file_restyles.html
+++ b/dom/animation/test/mozilla/file_restyles.html
@@ -28,26 +28,103 @@ title
 >
 <
 script
-src
+>
+var
+ok
 =
-"
-chrome
-:
-/
-/
-mochikit
-/
-content
-/
-tests
-/
-SimpleTest
-/
+opener
+.
+ok
+.
+bind
+(
+opener
+)
+;
+var
+is
+=
+opener
+.
+is
+.
+bind
+(
+opener
+)
+;
+var
+todo
+=
+opener
+.
+todo
+.
+bind
+(
+opener
+)
+;
+var
+todo_is
+=
+opener
+.
+todo_is
+.
+bind
+(
+opener
+)
+;
+var
+info
+=
+opener
+.
+info
+.
+bind
+(
+opener
+)
+;
+var
+original_finish
+=
+opener
+.
 SimpleTest
 .
-js
-"
->
+finish
+;
+var
+SimpleTest
+=
+opener
+.
+SimpleTest
+;
+SimpleTest
+.
+finish
+=
+function
+finish
+(
+)
+{
+self
+.
+close
+(
+)
+;
+original_finish
+(
+)
+;
+}
 <
 /
 script
@@ -57,13 +134,6 @@ script
 src
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -83,13 +153,6 @@ script
 src
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -109,13 +172,6 @@ script
 src
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -164,13 +220,6 @@ css
 href
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -308,7 +357,12 @@ onFrame
 var
 docShell
 =
+SpecialPowers
+.
+wrap
+(
 window
+)
 .
 QueryInterface
 (
@@ -558,24 +612,6 @@ resolve
 )
 ;
 }
-SimpleTest
-.
-expectAssertions
-(
-0
-1
-)
-;
-/
-/
-bug
-1332970
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 var
 omtaEnabled
 =
@@ -739,7 +775,12 @@ ready
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -835,7 +876,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -949,7 +995,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -1044,7 +1095,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -1146,7 +1202,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -1617,7 +1678,12 @@ ready
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -2533,7 +2599,12 @@ ready
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -3108,7 +3179,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -3430,7 +3506,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -3468,7 +3549,12 @@ compositor
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -3650,7 +3736,12 @@ style
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -3886,7 +3977,12 @@ style
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -3979,7 +4075,12 @@ waitForFrame
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -4229,7 +4330,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 )
@@ -4481,7 +4587,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -5086,7 +5197,12 @@ ready
 ok
 (
 !
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -5209,7 +5325,12 @@ waitForFrame
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
@@ -6525,7 +6646,12 @@ ready
 ;
 ok
 (
+SpecialPowers
+.
+wrap
+(
 animation
+)
 .
 isRunningOnCompositor
 '
