Bug 1302667 - CSP: Update test_child-src_worker.html because child-src falls back to script-src. r=dveditz,mckinley
UltraBlame original commit: ff86e185e09d1db0802aa7b67f36a7f968e3757a

--- a/dom/security/test/csp/test_child-src_worker.html
+++ b/dom/security/test/csp/test_child-src_worker.html
@@ -753,9 +753,15 @@ none
 script
 -
 src
-'
-self
-'
+https
+:
+/
+/
+www
+.
+example
+.
+org
 '
 unsafe
 -
@@ -802,9 +808,15 @@ none
 script
 -
 src
-'
-self
-'
+https
+:
+/
+/
+www
+.
+example
+.
+org
 '
 unsafe
 -
@@ -855,9 +867,15 @@ none
 script
 -
 src
-'
-self
-'
+https
+:
+/
+/
+www
+.
+example
+.
+org
 '
 unsafe
 -
