Backed out changeset 70ccfda99dbc::ca6ae38c0432 (bug 1302667) for frequently failing mochitest in security/test/csp/test_worker_src.html r=backout a=backout on a CLOSED TREE
Backed out changeset ca6ae38c0432 (bug 1302667)
Backed out changeset ff86e185e09d (bug 1302667)
Backed out changeset 8ec6b8bf8c6c (bug 1302667)
Backed out changeset 21c73f9d8fac (bug 1302667)
Backed out changeset e982481dbf2c (bug 1302667)
Backed out changeset 70ccfda99dbc (bug 1302667)

UltraBlame original commit: e06653ee31c4d9853ddfef1c69deb8ea5cc83f74

--- a/dom/security/test/csp/test_child-src_worker.html
+++ b/dom/security/test/csp/test_child-src_worker.html
@@ -753,15 +753,9 @@ none
 script
 -
 src
-https
-:
-/
-/
-www
-.
-example
-.
-org
+'
+self
+'
 '
 unsafe
 -
@@ -808,15 +802,9 @@ none
 script
 -
 src
-https
-:
-/
-/
-www
-.
-example
-.
-org
+'
+self
+'
 '
 unsafe
 -
@@ -867,15 +855,9 @@ none
 script
 -
 src
-https
-:
-/
-/
-www
-.
-example
-.
-org
+'
+self
+'
 '
 unsafe
 -
