Bug 1391688 - Add damp test to track opening the console with messages in the cache; r=bgrins.
This adds a test that measure the time it takes to open the console
on a page with 100 logged messages and show something meaningful to the user.

MozReview-Commit-ID: FMx9QRKvpfl

UltraBlame original commit: 9f4f27cd706931ecde1b97b2fe468189e7b8230f

--- a/testing/talos/talos/tests/devtools/addon/content/damp.html
+++ b/testing/talos/talos/tests/devtools/addon/content/damp.html
@@ -205,6 +205,13 @@ objectexpand
 :
 true
 "
+console
+.
+openwithcache
+"
+:
+true
+"
 inspector
 .
 mutations
@@ -574,6 +581,30 @@ and
 close
 the
 console
+"
+"
+console
+.
+openwithcache
+"
+:
+"
+Measure
+time
+to
+render
+last
+logged
+messages
+in
+console
+for
+a
+page
+with
+100
+logged
+messages
 "
 "
 inspector
