Bug 1412504 - update styling for about:devtools;r=nchevobbe
MozReview-Commit-ID: 42Pe9BD7dVa

UltraBlame original commit: 710ce0548f3ac0b5b00df2c430855c115ebed2dd

--- a/devtools/shim/aboutdevtools/aboutdevtools.xhtml
+++ b/devtools/shim/aboutdevtools/aboutdevtools.xhtml
@@ -410,8 +410,6 @@ h1
 class
 =
 "
-installpage
--
 title
 "
 id
@@ -443,8 +441,6 @@ h1
 class
 =
 "
-installpage
--
 title
 "
 id
@@ -499,11 +495,6 @@ dtd
 >
 <
 p
-class
-=
-"
-message
-"
 id
 =
 "
@@ -532,11 +523,6 @@ p
 >
 <
 p
-class
-=
-"
-message
-"
 id
 =
 "
@@ -563,11 +549,6 @@ p
 >
 <
 p
-class
-=
-"
-message
-"
 id
 =
 "
@@ -596,11 +577,6 @@ p
 >
 <
 p
-class
-=
-"
-message
-"
 id
 =
 "
@@ -629,11 +605,6 @@ p
 >
 <
 p
-class
-=
-"
-message
-"
 >
 &
 aboutDevtools
@@ -799,6 +770,11 @@ pane
 >
 <
 h1
+class
+=
+"
+title
+"
 >
 &
 aboutDevtools
@@ -813,11 +789,6 @@ h1
 >
 <
 p
-class
-=
-"
-message
-"
 id
 =
 "
