Bug 1408331 - add footer to about:devtools page;r=nchevobbe
Add a footer containing a link to download Firefox developer
edition in about:devtools after devtools have been enabled.

MozReview-Commit-ID: KFefF6qB9tO

UltraBlame original commit: e25cb414c2f2b99759d18ec5ca8747ce982069e8

--- a/devtools/shim/aboutdevtools/aboutdevtools.xhtml
+++ b/devtools/shim/aboutdevtools/aboutdevtools.xhtml
@@ -622,6 +622,7 @@ a
 class
 =
 "
+external
 installpage
 -
 link
@@ -1643,6 +1644,166 @@ ul
 <
 /
 div
+>
+<
+footer
+>
+<
+img
+class
+=
+"
+dev
+-
+edition
+-
+logo
+"
+src
+=
+"
+chrome
+:
+/
+/
+devtools
+-
+shim
+/
+content
+/
+aboutdevtools
+/
+images
+/
+dev
+-
+edition
+-
+logo
+.
+svg
+"
+alt
+=
+"
+Firefox
+Developer
+Edition
+logo
+"
+/
+>
+<
+div
+class
+=
+"
+footer
+-
+message
+"
+>
+<
+h1
+class
+=
+"
+footer
+-
+message
+-
+title
+"
+>
+Firefox
+Developer
+Edition
+<
+/
+h1
+>
+<
+p
+>
+Looking
+for
+more
+than
+just
+Developer
+Tools
+?
+Check
+out
+the
+Firefox
+browser
+that
+is
+built
+specifically
+for
+developers
+and
+modern
+workflows
+.
+<
+/
+p
+>
+<
+a
+class
+=
+"
+external
+footer
+-
+link
+"
+href
+=
+"
+https
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+en
+-
+US
+/
+firefox
+/
+developer
+/
+"
+target
+=
+"
+_blank
+"
+>
+Learn
+more
+<
+/
+a
+>
+<
+/
+div
+>
+<
+/
+footer
 >
 <
 /
