Bug 1404422 - Part 2. Make chrome test ignore generic, unrelated chrome URLs from events. r=tnikkel
UltraBlame original commit: 1a1bcb63456d28348616e19782a635159f6347e0

--- a/docshell/test/chrome/test_bug909218.html
+++ b/docshell/test/chrome/test_bug909218.html
@@ -936,6 +936,37 @@ resource
 URLs
 too
 .
+/
+/
+We
+may
+also
+see
+eg
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+resizer
+.
+png
+so
+/
+/
+skip
+chrome
+:
+/
+/
+URLs
+too
+.
 if
 (
 req
@@ -959,6 +990,19 @@ startsWith
 (
 "
 resource
+:
+"
+)
+|
+|
+req
+.
+name
+.
+startsWith
+(
+"
+chrome
 :
 "
 )
