Bug 1413056 - Use utils.js in test_bug1408734.html for waitForState and waitForControlled. r=bkelly
UltraBlame original commit: a137a0d96fb663b8f90af9f1ec985534c11d6e40

--- a/dom/workers/test/serviceworkers/test_bug1408734.html
+++ b/dom/workers/test/serviceworkers/test_bug1408734.html
@@ -99,6 +99,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -228,29 +242,6 @@ async
 =
 >
 {
-let
-waitForControlled
-=
-new
-Promise
-(
-(
-resolve
-)
-=
->
-{
-navigator
-.
-serviceWorker
-.
-oncontrollerchange
-=
-resolve
-;
-}
-)
-;
 /
 /
 register
@@ -283,7 +274,7 @@ scope
 )
 ;
 let
-worker
+sw
 =
 registration
 .
@@ -298,9 +289,26 @@ active
 /
 wait
 for
+service
+worker
+be
+activated
+await
+waitForState
+(
+sw
+'
+activated
+'
+)
+;
+/
+/
+wait
+for
 control
 changed
-worker
+sw
 .
 postMessage
 (
@@ -311,6 +319,9 @@ claim
 ;
 await
 waitForControlled
+(
+window
+)
 ;
 /
 /
