--- a/js/xpconnect/tests/mochitest/test_bug862380.html
+++ b/js/xpconnect/tests/mochitest/test_bug862380.html
@@ -124,7 +124,6 @@ ifr
 )
 .
 contentWindow
-true
 )
 ;
 checkNotEnumerable
@@ -138,7 +137,6 @@ ifr
 contentWindow
 .
 location
-false
 )
 ;
 SimpleTest
@@ -152,80 +150,10 @@ function
 checkNotEnumerable
 (
 obj
-isWindow
 )
 {
 try
 {
-const
-expectedWindow
-=
-[
-"
-0
-"
-"
-window
-"
-"
-location
-"
-"
-top
-"
-"
-close
-"
-"
-focus
-"
-"
-blur
-"
-"
-postMessage
-"
-"
-self
-"
-"
-closed
-"
-"
-frames
-"
-"
-length
-"
-"
-opener
-"
-"
-parent
-"
-]
-;
-const
-expectedLocation
-=
-[
-"
-replace
-"
-"
-href
-"
-]
-;
-const
-expected
-=
-isWindow
-?
-expectedWindow
-:
-expectedLocation
-;
 is
 (
 Object
@@ -236,25 +164,16 @@ obj
 )
 .
 length
-expected
-.
-length
+0
 "
 Object
 .
 keys
 gives
-right
+empty
 array
-length
 "
 )
-;
-var
-actual
-=
-[
-]
 ;
 for
 (
@@ -263,77 +182,13 @@ i
 in
 obj
 )
-actual
-.
-push
+ok
 (
-i
-)
-;
-is
-(
-actual
-.
-length
-expected
-.
-length
+false
 "
-Enumeration
-sees
-the
-right
-number
-of
-props
-"
-)
-;
-actual
-.
-sort
-(
-)
-;
-expected
-.
-sort
-(
-)
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-actual
-.
-length
-;
-+
-+
-i
-)
-is
-(
-actual
-[
-i
-]
-expected
-[
-i
-]
-"
-Arrays
-should
-be
-the
-same
+Enumerated
+something
+:
 "
 +
 i
