Bug 1295886 - P15. Enable FLAC mochitest on Android. r=gerald
MozReview-Commit-ID: 83mJleAMVro

UltraBlame original commit: c387badaa88ba586c1fee17aabc35521ec781b42

--- a/dom/media/test/test_can_play_type_mpeg.html
+++ b/dom/media/test/test_can_play_type_mpeg.html
@@ -1065,44 +1065,24 @@ probably
 /
 Flac
 .
-/
-/
-Not
-available
-on
-Android
-yet
-.
-var
-expectedResult
-=
-IsSupportedAndroid
+check
 (
-)
-?
+"
+audio
+/
+mp4
+;
+codecs
+=
+\
+"
+flac
+\
 "
 "
-:
 "
 probably
 "
-;
-check
-(
-"
-audio
-/
-mp4
-;
-codecs
-=
-\
-"
-flac
-\
-"
-"
-expectedResult
 )
 ;
 check
@@ -1116,7 +1096,9 @@ codecs
 =
 flac
 "
-expectedResult
+"
+probably
+"
 )
 ;
 /
