Bug 1412930 - Package localized prerendered files. r=k88hudson
MozReview-Commit-ID: JUPAkCBhvPc

UltraBlame original commit: f7af48305978405e52c1b61920b3a51746249579

--- a/browser/extensions/activity-stream/prerendered/id/activity-stream-prerendered.html
+++ b/browser/extensions/activity-stream/prerendered/id/activity-stream-prerendered.html
@@ -8,7 +8,7 @@ html
 lang
 =
 "
-lo
+id
 "
 dir
 =
@@ -122,6 +122,8 @@ csp
 <
 title
 >
+Tab
+Baru
 <
 /
 title
@@ -272,8 +274,7 @@ react
 checksum
 =
 "
--
-230993260
+1271924812
 "
 >
 <
@@ -356,6 +357,9 @@ reactid
 6
 "
 >
+Cari
+di
+Web
 <
 /
 span
@@ -392,10 +396,16 @@ maxlength
 placeholder
 =
 "
+Cari
+di
+Web
 "
 title
 =
 "
+Cari
+di
+Web
 "
 data
 -
@@ -423,6 +433,7 @@ button
 title
 =
 "
+Cari
 "
 data
 -
@@ -459,6 +470,7 @@ reactid
 10
 "
 >
+Cari
 <
 /
 span
@@ -605,6 +617,8 @@ reactid
 17
 "
 >
+Situs
+Teratas
 <
 /
 span
@@ -769,6 +783,8 @@ reactid
 23
 "
 >
+Situs
+Teratas
 <
 /
 span
@@ -806,6 +822,14 @@ reactid
 25
 "
 >
+Mengakses
+situs
+web
+yang
+paling
+sering
+Anda
+kunjungi
 .
 <
 /
@@ -854,6 +878,9 @@ reactid
 28
 "
 >
+Preferensi
+Tab
+Baru
 <
 /
 span
@@ -1878,6 +1905,11 @@ edit
 title
 =
 "
+Ubahsuai
+bagian
+Situs
+Teratas
+Anda
 "
 data
 -
@@ -1897,6 +1929,7 @@ reactid
 76
 "
 >
+Sunting
 <
 /
 span
@@ -2049,8 +2082,8 @@ reactid
 83
 "
 >
-Recommended
-by
+Disarankan
+oleh
 Pocket
 <
 /
@@ -2734,8 +2767,8 @@ reactid
 113
 "
 >
-Popular
-Topics
+Topik
+Populer
 :
 <
 /
@@ -2882,6 +2915,7 @@ reactid
 120
 "
 >
+Sorotan
 <
 /
 span
@@ -3631,7 +3665,7 @@ stream
 /
 prerendered
 /
-lo
+id
 /
 activity
 -
