Bug 1411906 - add close button to about:devtools if devtools are disabled;r=nchevobbe
A close button on the starting page of the devtools onboarding flow
will be helpful for users who triggered the shortcut by mistake and
would like to escape the flow.

MozReview-Commit-ID: 7rZ50jFepJ3

UltraBlame original commit: 6f1e32b85be2e46a8167c3d9945df58e461e8adb

--- a/devtools/shim/aboutdevtools/aboutdevtools.xhtml
+++ b/devtools/shim/aboutdevtools/aboutdevtools.xhtml
@@ -662,11 +662,21 @@ learnMoreLink
 a
 >
 <
+div
+class
+=
+"
+buttons
+-
+container
+"
+>
+<
 button
 class
 =
 "
-installpage
+primary
 -
 button
 "
@@ -686,6 +696,36 @@ installButton
 <
 /
 button
+>
+<
+button
+class
+=
+"
+default
+-
+button
+"
+id
+=
+"
+close
+"
+>
+&
+aboutDevtools
+.
+enable
+.
+closeButton
+;
+<
+/
+button
+>
+<
+/
+div
 >
 <
 /
